# bitsy-file

./: .gitignore  .gitmodules  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  Taskfile.yml
src/: colour.rs  dialogue.rs  ending.rs  error.rs  exit.rs  frames.rs  game.rs  image.rs  instance.rs  item.rs  lib.rs  mock.rs  palette.rs  position.rs  room.rs  segments.rs  sprite.rs  test_omnibus.rs  text.rs  tile.rs  variable.rs
src/test-resources/: arabic.bitsy  avatar  default-v7.10.bitsy  default-v8.14.bitsy  ending  example.bitsy  image  image-oob  item  room  room-with-walls  segments  sprite  tile  tile-chequers
