[package]
name = "bitsy-nostd-parser"
version = "0.711.0"
authors = ["Gram <git@orsinium.dev>", "Max Bradbury <max@tinybird.info>"]
edition = "2021"
description = "A parser and utilities for working with Bitsy game data"
readme = "README.md"
repository = "https://github.com/orsinium-labs/bitsy-nostd-parser"
license = "MIT"
keywords = ["gamedev", "bitsy", "nostd"]
categories = ["no-std"]

[dependencies]
hashbrown = "0.16"
