[package]
name = "bitsy-file"
version = "0.712.1"
authors = [
    # current maintainer of the fork
    "Gram <git@orsinium.dev>",
    # the original project creator
    "Max Bradbury <max@tinybird.info>",
]
edition = "2024"
description = "A parser for Bitsy game files"
readme = "README.md"
repository = "https://github.com/orsinium-labs/bitsy-file"
license = "MIT"
keywords = ["gamedev", "bitsy", "nostd"]
categories = [
    "compilers",
    "no-std",
    "game-engines",
    "parsing",
    "parser-implementations",
]

[dependencies]
